--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700');
+
 :root {
   --orange: #f7861c;
   --purple: #C86DD7;
@@ -13,42 +15,7 @@
 }
 
 .metamask-donate * {
-  font-family: 'San Francisco Mono', sans-serif;
+  font-family: 'Source Sans Pro', arial;
   outline: none;
-}
-
-@font-face {
-  font-family: 'San Francisco Mono';
-  src: url('./assets/fonts/SFMono-Light.otf') format('opentype');
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: 'San Francisco Mono';
-  src: url('./assets/fonts/SFMono-Regular.otf') format('opentype');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'San Francisco Mono';
-  src: url('./assets/fonts/SFMono-Medium.otf') format('opentype');
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: 'San Francisco Mono';
-  src: url('./assets/fonts/SFMono-Semibold.otf') format('opentype');
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: 'San Francisco Mono';
-  src: url('./assets/fonts/SFMono-Bold.otf') format('opentype');
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: 'San Francisco Mono';
-  src: url('./assets/fonts/SFMono-Heavy.otf') format('opentype');
-  font-weight: 800;
+  -webkit-font-smoothing: antialiased;
 }
